crates/watt_tests/src/codegen/snapshots/watt_tests__codegen__structs__structs_with_generics.snap
---
source: crates/watt_tests/src/codegen/structs.rs
expression: "\ntype Mammoth[T] {\n    value: Iceberg[T]\n}\n\ntype Iceberg[T] {\n    value: T\n}\n\nfn main() {\n    let a = Mammoth(Iceberg(3))\n}\n    "
---
Source code:

type Mammoth[T] {
    value: Iceberg[T]
}

type Iceberg[T] {
    value: T
}

fn main() {
    let a = Mammoth(Iceberg(3))
}
    

Generation result:
import {
    $$match,
    $$equals,
    $$todo,
    $$range,
    $$EqPattern,
    $$UnwrapPattern,
    $$WildcardPattern,
    $$BindPattern,
    $$VariantPattern,
} from "./prelude.js"

export class $Mammoth {
    constructor(value) {
        this.$meta = "Type";
        this.$type = "Mammoth";
        this.value = value
    }
}
export function Mammoth(value) {
    return new $Mammoth(value);
}

export class $Iceberg {
    constructor(value) {
        this.$meta = "Type";
        this.$type = "Iceberg";
        this.value = value
    }
}
export function Iceberg(value) {
    return new $Iceberg(value);
}

export function main() {
    let a = Mammoth(Iceberg(3))
}
